# assistant-core-repo

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  mcp_servers.json  pyproject.toml
.github/workflows/: tests.yml
assistant_shell/: chat_loop.py
core/: agent.py  planner.py  policy.py  router.py  session_state.py  tool_registry.py  types.py  wake.py
core/memory/: extractor.py  retriever.py  semantic.py  store.py
core/tools/: code_exec.py  fetch_page.py  mcp_client.py  screenshot.py  weather.py  web_search.py
docs/: TASKS.md  real_use_failures.md  spec-v1.md
evals/: cases.json  runner.py
scripts/: checkpoint_core_contract.sh  dev.sh
server/: app.py  chat_service.py  models.py
src/assistant/: __init__.py  cli.py  engine.py  filesystem.py  models.py  policy.py  session.py
tests/: test_chat_loop_import.py  test_cli.py  test_engine.py  test_engine_trace.py  test_engine_transitions.py  test_filesystem.py  test_filesystem_boundaries.py  test_pending_state_contract.py  test_policy.py  test_policy_contract.py  test_policy_engine_contract.py  test_route_contract.py  test_router_contract.py  test_session.py  test_session_state_contract.py  test_tool_registry_contract.py
web/: index.html
